--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
 
+buildscript {
     ext {
+        agp_version = '8.9.2'
         compose_version = '1.0.2'
     }
     ext.kotlin_version = "1.5.21"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
     }
 }
@@ -18,7 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
 
         maven {
             url = 'https://libs.dev.cred.club/'
@@ -26,6 +26,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
