--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+mavenCentralUserName = 3X1VHL+J
+mavenCentralPassword = BgIwVOihSuLizqDwGUxCncGvN4COTG65WCetERkqt3pT
+signing.keyId = 5B653304
+signing.password = Siva@8838545588
+signing.secretKeyRingFile = Users/siva.1_ftc/my_secring.gpg
