--- a/gradle.properties
+++ b/gradle.properties
@@ -20,8 +20,8 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-mavenCentralUserName = 3X1VHL+J
-mavenCentralPassword = BgIwVOihSuLizqDwGUxCncGvN4COTG65WCetERkqt3pT
+mavenCentralUsername = JlC4otw1
+mavenCentralPassword = osBumIbfcrljqV8yrHWD7ZfqwcYt5N1IGcAK+1Hg+hrS
 signing.keyId = 5B653304
 signing.password = Siva@8838545588
-signing.secretKeyRingFile = Users/siva.1_ftc/my_secring.gpg
+signing.secretKeyRingFile = /Users/siva.1_ftc/my_secring.gpg
